--- a/udagram-api/package.json
+++ b/udagram-api/package.json
@@ -23,28 +23,28 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "email-validator": "^2.0.4",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.0.3",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^5.21.4",
-    "sequelize-typescript": "^0.6.9"
+    "sequelize": "^6.32.1",
+    "sequelize-typescript": "^2.1.5"
   },
   "devDependencies": {
-    "@types/bluebird": "^3.5.26",
+    "@types/bluebird": "^3.5.33",
     "@types/cors": "^2.8.6",
-    "@types/express": "^4.16.1",
-    "@types/node": "^11.11.6",
-    "@types/sequelize": "^4.27.44",
+    "@types/express": "^4.17.9",
+    "@types/node": "^11.15.42",
+    "@types/sequelize": "^4.28.15",
     "@types/validator": "^10.9.0",
     "@typescript-eslint/eslint-plugin": "^2.19.2",
     "@typescript-eslint/parser": "^2.19.2",
     "chai": "^4.2.0",
-    "chai-http": "^4.2.1",
+    "chai-http": "^4.3.0",
     "eslint": "^6.8.0",
     "eslint-config-google": "^0.14.0",
-    "mocha": "^6.1.4",
-    "ts-node-dev": "^1.0.0-pre.32",
-    "typescript": "^3.3.4000"
+    "mocha": "^6.2.3",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.1.6"
   }
 }
