--- a/udagram-frontend/.circleci/config.yml
+++ b/udagram-frontend/.circleci/config.yml
@@ -13,10 +13,10 @@ jobs:
 
       - run: docker --version
       - run: docker build -t udagram-frontend .
-      - run: docker tag udagram-frontend xxyyzz87/udagram-frontend:latest
+      - run: docker tag udagram-frontend xxyyzz87/udagram-frontend:$(git rev-parse --short HEAD)
       - run: |
           echo "$DOCKER_PASSWORD" | docker login -u $DOCKER_USERNAME --password-stdin
-          docker push xxyyzz87/udagram-frontend
+          docker push xxyyzz87/udagram-frontend:$(git rev-parse --short HEAD)
 
 # Orchestrate our job run sequence
 workflows:
