--- a/deployment/k8s/backend-feed-deployment.yaml
+++ b/deployment/k8s/backend-feed-deployment.yaml
@@ -1,22 +1,29 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: backend-feed
+  name: backend-api-feed
   labels:
-    app: backend-feed
+    app: backend-api-feed
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: backend-feed
+      app: backend-api-feed
   template:
     metadata:
       labels:
-        app: backend-feed
+        app: backend-api-feed
     spec:
       containers:
-        - name: backend-feed
+        - name: backend-api-feed
           image: xxyyzz87/udagram-api-feed:630f5cd
+          resources:
+            requests:
+              memory: '64Mi'
+              cpu: '0.2'
+            limits:
+              memory: '2048Mi'
+              cpu: '2'
           ports:
             - containerPort: 8080
           envFrom:
