--- a/deployment/k8s/reverseproxy-service.yaml
+++ b/deployment/k8s/reverseproxy-service.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: reverseproxy
 spec:
-  type: LoadBalancer
+  # type: LoadBalancer
   ports:
     - name: '8080'
       port: 8080
